metadata-classic/objects/becquerel_rca_request_categories__x.object
<CustomObject>
    <description>becquerel__rca_request_categories</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__rca_request_categories</externalName>
    <fields>
        <fullName>field_36__c</fullName>
        <description>_field_36</description>
        <externalDeveloperName>_field_36</externalDeveloperName>
        <label>_field_36</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_accomplishment_phrase__c</fullName>
        <description>rca_accomplishment_phrase</description>
        <externalDeveloperName>rca_accomplishment_phrase</externalDeveloperName>
        <label>rca_accomplishment_phrase</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_active</description>
        <externalDeveloperName>rca_active</externalDeveloperName>
        <label>rca_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_allowed_estimate_types__c</fullName>
        <description>rca_allowed_estimate_types</description>
        <externalDeveloperName>rca_allowed_estimate_types</externalDeveloperName>
        <label>rca_allowed_estimate_types</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_allows_image_upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_allows_image_upload</description>
        <externalDeveloperName>rca_allows_image_upload</externalDeveloperName>
        <label>rca_allows_image_upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_archetype__c</fullName>
        <description>rca_archetype</description>
        <externalDeveloperName>rca_archetype</externalDeveloperName>
        <label>rca_archetype</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_auto_syndication_status__c</fullName>
        <description>rca_auto_syndication_status</description>
        <externalDeveloperName>rca_auto_syndication_status</externalDeveloperName>
        <label>rca_auto_syndication_status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_category_description__c</fullName>
        <description>rca_category_description</description>
        <externalDeveloperName>rca_category_description</externalDeveloperName>
        <label>rca_category_description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_core_category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_core_category</description>
        <externalDeveloperName>rca_core_category</externalDeveloperName>
        <label>rca_core_category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_create_time__c</fullName>
        <description>rca_create_time</description>
        <externalDeveloperName>rca_create_time</externalDeveloperName>
        <label>rca_create_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rca_credit_price__c</fullName>
        <description>rca_credit_price</description>
        <externalDeveloperName>rca_credit_price</externalDeveloperName>
        <label>rca_credit_price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_default_bid_estimate_type__c</fullName>
        <description>rca_default_bid_estimate_type</description>
        <externalDeveloperName>rca_default_bid_estimate_type</externalDeveloperName>
        <label>rca_default_bid_estimate_type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_delete_time__c</fullName>
        <description>rca_delete_time</description>
        <externalDeveloperName>rca_delete_time</externalDeveloperName>
        <label>rca_delete_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rca_direct_marketing_copy_json__c</fullName>
        <description>rca_direct_marketing_copy_json</description>
        <externalDeveloperName>rca_direct_marketing_copy_json</externalDeveloperName>
        <label>rca_direct_marketing_copy_json</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_exclude_from_recommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_exclude_from_recommendations</description>
        <externalDeveloperName>rca_exclude_from_recommendations</externalDeveloperName>
        <label>rca_exclude_from_recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_fixed_price_descriptor__c</fullName>
        <description>rca_fixed_price_descriptor</description>
        <externalDeveloperName>rca_fixed_price_descriptor</externalDeveloperName>
        <label>rca_fixed_price_descriptor</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_flags__c</fullName>
        <description>rca_flags</description>
        <externalDeveloperName>rca_flags</externalDeveloperName>
        <label>rca_flags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_her_hero_image_id__c</fullName>
        <description>rca_her_hero_image_id</description>
        <externalDeveloperName>rca_her_hero_image_id</externalDeveloperName>
        <label>rca_her_hero_image_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_image_upload_answer_copy__c</fullName>
        <description>rca_image_upload_answer_copy</description>
        <externalDeveloperName>rca_image_upload_answer_copy</externalDeveloperName>
        <label>rca_image_upload_answer_copy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_image_upload_question_copy__c</fullName>
        <description>rca_image_upload_question_copy</description>
        <externalDeveloperName>rca_image_upload_question_copy</externalDeveloperName>
        <label>rca_image_upload_question_copy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_impact_phrase__c</fullName>
        <description>rca_impact_phrase</description>
        <externalDeveloperName>rca_impact_phrase</externalDeveloperName>
        <label>rca_impact_phrase</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_is_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_is_test</description>
        <externalDeveloperName>rca_is_test</externalDeveloperName>
        <label>rca_is_test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_keywords__c</fullName>
        <description>rca_keywords</description>
        <externalDeveloperName>rca_keywords</externalDeveloperName>
        <label>rca_keywords</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_meta_type__c</fullName>
        <description>rca_meta_type</description>
        <externalDeveloperName>rca_meta_type</externalDeveloperName>
        <label>rca_meta_type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <description>rca_name</description>
        <externalDeveloperName>rca_name</externalDeveloperName>
        <label>rca_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_occupation_name__c</fullName>
        <description>rca_occupation_name</description>
        <externalDeveloperName>rca_occupation_name</externalDeveloperName>
        <label>rca_occupation_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_pii_sampling_rate__c</fullName>
        <description>rca_pii_sampling_rate</description>
        <externalDeveloperName>rca_pii_sampling_rate</externalDeveloperName>
        <label>rca_pii_sampling_rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_plural_taxonym__c</fullName>
        <description>rca_plural_taxonym</description>
        <externalDeveloperName>rca_plural_taxonym</externalDeveloperName>
        <label>rca_plural_taxonym</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_price_cc__c</fullName>
        <description>rca_price_cc</description>
        <externalDeveloperName>rca_price_cc</externalDeveloperName>
        <label>rca_price_cc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_price_iq__c</fullName>
        <description>rca_price_iq</description>
        <externalDeveloperName>rca_price_iq</externalDeveloperName>
        <label>rca_price_iq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_request_category_id__c</fullName>
        <description>rca_request_category_id</description>
        <externalDeveloperName>rca_request_category_id</externalDeveloperName>
        <label>rca_request_category_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_request_category_pk__c</fullName>
        <description>rca_request_category_pk</description>
        <externalDeveloperName>rca_request_category_pk</externalDeveloperName>
        <label>rca_request_category_pk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_scheduling_question_text__c</fullName>
        <description>rca_scheduling_question_text</description>
        <externalDeveloperName>rca_scheduling_question_text</externalDeveloperName>
        <label>rca_scheduling_question_text</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_scheduling_type__c</fullName>
        <description>rca_scheduling_type</description>
        <externalDeveloperName>rca_scheduling_type</externalDeveloperName>
        <label>rca_scheduling_type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_scheduling_type_v2__c</fullName>
        <description>rca_scheduling_type_v2</description>
        <externalDeveloperName>rca_scheduling_type_v2</externalDeveloperName>
        <label>rca_scheduling_type_v2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_submeta_name__c</fullName>
        <description>rca_submeta_name</description>
        <externalDeveloperName>rca_submeta_name</externalDeveloperName>
        <label>rca_submeta_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_taxonym__c</fullName>
        <description>rca_taxonym</description>
        <externalDeveloperName>rca_taxonym</externalDeveloperName>
        <label>rca_taxonym</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_travel_types__c</fullName>
        <description>rca_travel_types</description>
        <externalDeveloperName>rca_travel_types</externalDeveloperName>
        <label>rca_travel_types</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_user_name_preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rca_user_name_preferred</description>
        <externalDeveloperName>rca_user_name_preferred</externalDeveloperName>
        <label>rca_user_name_preferred</label>
        <type>Checkbox</type>
    </fields>
    <label>becquerel__rca_request_categories</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>rca_name__c</columns>
        <columns>rca_archetype__c</columns>
        <columns>rca_meta_type__c</columns>
        <columns>rca_submeta_name__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_user_name_preferred__c</columns>
        <columns>rca_active__c</columns>
        <columns>rca_travel_types__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>rca_credit_price__c</columns>
        <columns>rca_flags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>becquerel__rca_request_categories</pluralLabel>
</CustomObject>